# target-matterbeam-http

./: .env.example  CHANGELOG.md  LICENSE  README.md  config.json  meltano.yml  pyproject.toml  state.json  tox.ini
.github/workflows/: release-please.yml  release.yml  test.yml
target_matterbeam_http/: __init__.py  __main__.py  sinks.py  target.py
target_matterbeam_http/utils/: debug.py
tests/: __init__.py  test_core.py
