[tool.poetry]
name = "target-matterbeam-http"
version = "1.0.1"
description = "Singer target for MatterbeamHttp, built with the Meltano Singer SDK."
readme = "README.md"
authors = ["Dane Thurber <dane@matterbeam.com>"]
keywords = [
    "ELT",
    "MatterbeamHttp",
]
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
singer-sdk = { version="~=0.42.1", extras = ["faker"] }
fs-s3fs = { version = "~=1.1.1", optional = true }
requests = "~=2.32.3"
backoff = "^2.2.1"

[tool.poetry.dev-dependencies]
pytest = ">=8"
singer-sdk = { version="~=0.42.1", extras = ["testing"] }
pytest-sugar = "^1.0.0"
ruff = "^0.6.7"
mypy = "^1.11.2"

[tool.poetry.extras]
s3 = ["fs-s3fs"]

[tool.pytest.ini_options]
addopts = '--durations=10'

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true

[tool.ruff]
src = ["target_matterbeam_http"]
target-version = "py38"
extend-exclude = ["tests"]

[tool.ruff.lint]
ignore = [
    "ANN101",  # missing-type-self
    "ANN102",  # missing-type-cls
    "COM812",  # missing-trailing-comma
    "ISC001",  # single-line-implicit-string-concatenation
]
select = ["ALL"]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint.isort]
known-first-party = ["target_matterbeam_http"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[build-system]
requires = ["poetry-core==1.9.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
target-matterbeam-http = 'target_matterbeam_http.target:TargetMatterbeamHttp.cli'
